the navigation menu open and closes correctly on mobile

--- a/src/app/(loggedin)/LoggedInLayout.module.css
+++ b/src/app/(loggedin)/LoggedInLayout.module.css
@@ -1,6 +1,6 @@
 .main {
     height: 100%;
     width: 100%;
-    margin-top: 100px;
-    min-height: calc(100vh - 100px);
+    margin-top: var(--header-height);
+    min-height: calc(100vh - var(--header-height));
 }
